GNOME Bugzilla – Bug 710744
choice name class on attribute not implemented
Last modified: 2016-01-07 04:13:46 UTC
If you use a choice as a name class on an attribute, you get the message "Unimplemented block at relaxng.c:9053", and it always matches, even if it shouldn't. You can use choice as a name class on elements without any problems. Attaching test cases: one RNG file and two XML files. One of the XML files should validate. The other should not. Instead, they both print this warning but still validate. Jing handles these correctly. I have a patch, which I'll attach once I add regression tests.
Created attachment 257951 [details] RNG file to use on both XML test files
Created attachment 257952 [details] XML file that should validate against test.rng
Created attachment 257953 [details] XML file that should not validate against test.rng
Created attachment 257956 [details] [review] Implement choice for attribute name classes
Okay, all makes sense :-) Pushed: https://git.gnome.org/browse/libxml2/commit/?id=6473a41a49601da8355c4b407b99474ada170213 thanks a lot ! Daniel
(In reply to Daniel Veillard from comment #5) > Okay, all makes sense :-) Pushed: > > https://git.gnome.org/browse/libxml2/commit/ > ?id=6473a41a49601da8355c4b407b99474ada170213 > > thanks a lot ! > > Daniel This commit missed two test results: result/relaxng/710744_err result/relaxng/710744_valid I filed Bug 760249 to track this fix (patch attached).