Implement choice for name classes on attributes

https://bugzilla.gnome.org/show_bug.cgi?id=710744